# budgeting-app

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: account.rs  file_processing.rs  input_processing.rs  lib.rs  main.rs
src/test-files/: 1-account.csv  2-account.csv  bad-end.csv  bad-start.csv  bad-trans-label.csv  large-write-read-test.csv  main.csv  write-test.csv
