[package]
name = "budgeting-app"
version = "1.0.0"
edition = "2021"
authors = ["Luna Wilkes <luna.wilkes@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
sorted-list = "0.2.0"
rusty-money = "0.4.1"
itertools = "0.13.0"
convert_case = "0.6.0"