[package]
name = "budgeting-app"
version = "1.0.0"
edition = "2021"
authors = ["Luna <neovx.23@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
itertools = "0.13.0"
convert_case = "0.6.0"
clearscreen = "3.0.0"

[dev-dependencies]
proptest = "1.5.0"
